# Operating-Systems

./: .gitignore  README.md
Lab02/: CMakeLists.txt  Desctiption.md  run.sh
Lab02/src/: help.c  help.h  main.c
Lab03/: CMakeLists.txt  Desctiption.md  README.md  cmd_output.txt  piped_output.txt
Lab03/src/: message.h  monitor.c  node.c
Lab04/: CMakeLists.txt  input.txt  output.txt
Lab04/src/: main.c
Lab05/: CMakeLists.txt  cpuScheduler.c  cpuScheduler.h  getline.h  processQueue.c  processQueue.h
Lab05/given-output/: output-FCFS.txt  output-RR.txt  output-SJF.txt  output-SRTF.txt
Lab06/: README.md  philoBase.c
Lab07/: .gitignore  CMakeLists.txt  graph.c  graph.h  main.c  output.txt
Lab07/input/: input_direct_loop.txt  input_forest_delayed_loop.txt  input_forest_loop.txt  input_forest_no_loops.txt  input_indirect_loop.txt  input_self_loop.txt  input_vertex_fan.txt  input_vertex_on_a_stick.txt
Lab08/: .gitignore  CMakeLists.txt  inverted.c  inverted.h  testInverted.c
Lab08/outfiles/: build  console_log.txt  inverted.c  testInverted.c
Lab09/: CMakeLists.txt  output.txt  replace.c  replace.h
